# cairn

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  decisions.md  roadmap.md  spec.md
.factory/: init.sh  services.yaml
.factory/skills/rust-worker/: SKILL.md
.factory/validation/foundation/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/foundation/scrutiny/reviews/: error-and-document-types.json  fix-document-data-type.json  schema-infrastructure.json  versioning-transactions.json
.factory/validation/foundation/user-testing/: synthesis.json
.factory/validation/foundation/user-testing/flows/: doc-a.json  doc-b.json  errors.json  schema.json  txn.json
.factory/validation/operations/scrutiny/: synthesis.json  synthesis.round1.json
.factory/validation/operations/scrutiny/reviews/: fix-operations-scrutiny-issues.json  (+2 more)
.factory/validation/operations/user-testing/: synthesis.json
.github/workflows/: ci.yml
cairndb/: Cargo.toml
cairndb-core/: Cargo.toml
cairndb-core/src/: db.rs  document.rs  error.rs  lib.rs  schema.rs  storage.rs  versioning.rs
cairndb-parser/: Cargo.toml
cairndb-parser/src/: doc_literal.rs  error.rs  insert.rs  ir.rs  lib.rs  parse.rs  standard.rs  temporal.rs
cairndb/src/: error.rs  lib.rs  sql.rs
cairndb/tests/: sql_create_table.rs  sql_insert.rs  sql_select.rs
docs/: decisions.md  spec.md
docs/plans/: 004-storage-read-hygiene.md  005-sql-select-dispatch.md  README.md
plans/: 001-ci-baseline.md  002-claude-md.md  003-core-robustness.md  004-storage-read-hygiene.md  README.md
(+6 files in other folders)
