[package]
name = "cairndb-core"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.34", features = ["bundled"] }
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v7"] }

[dev-dependencies]
tempfile = "3"
